# BTL_3

./: .gitignore  README.md  README_MVP.md  credit.md  main.py  pyproject.toml
.git.corrupt-backup-20260323-185436/: config
.git.corrupt-backup-20260323-185436/objects/pack/: pack-c18fcb20d2b2fe5d6b4195dd1527a0f503a5c5ac.idx  pack-c18fcb20d2b2fe5d6b4195dd1527a0f503a5c5ac.pack  pack-c18fcb20d2b2fe5d6b4195dd1527a0f503a5c5ac.rev
src/: __init__.py
src/core/: __init__.py  assets.py  audio.py  game.py  game_world.py  parallax.py
src/entities/: __init__.py  animation.py  collectibles.py  obstacles.py  particles.py  player.py
src/scenes/: __init__.py  base.py  game_over_scene.py  instruction_scene.py  menu_scene.py  play_scene.py  settings_scene.py
src/systems/: __init__.py  cleanup.py  collision.py  config.py  difficulty.py  spawning.py
src/ui/: __init__.py  hud.py  prompts.py  theme.py
tests/: test_gameplay.py
